<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.OgrenciEkleFr">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ogrenciAdiText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/manrope_medium"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:textSize="17sp"
            android:text="@string/ogrenci_bilgilerini_giriniz" />


        <EditText
            android:id="@+id/editTextOgrenciAdi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:background="@drawable/emailpasswordborder"
            android:drawableLeft="@drawable/ic_baseline_person_24"
            android:drawablePadding="12dp"
            android:ems="14"
            android:fontFamily="@font/montserrat"
            android:hint="@string/ogrenci_adi"
            android:inputType="text"
            android:paddingStart="12dp"
            android:paddingTop="10dp"
            android:paddingEnd="8dp"
            android:paddingBottom="10dp"
            android:textColor="@color/black"
            android:textColorHint="#B7B6B6"
            android:textSize="17sp" />

        <EditText
            android:textColor="@color/black"
            android:id="@+id/editTextTelNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:background="@drawable/emailpasswordborder"
            android:drawableLeft="@drawable/phonecall"
            android:drawablePadding="12dp"
            android:ems="14"
            android:inputType="phone"
            android:fontFamily="@font/montserrat"
            android:textColorHint="#B7B6B6"
            android:hint="@string/ogrenci_tel_no"
            android:paddingStart="12dp"
            android:paddingTop="10dp"
            android:paddingEnd="8dp"
            android:paddingBottom="10dp"
            android:textSize="17sp" />

        <EditText
            android:textColor="@color/black"
            android:id="@+id/editTextLatitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:background="@drawable/emailpasswordborder"
            android:drawableLeft="@drawable/location"
            android:drawablePadding="12dp"
            android:ems="14"
            android:fontFamily="@font/montserrat"
            android:hint="@string/enlem_bilgisi_giriniz"
            android:textColorHint="#B7B6B6"
            android:inputType="number|text"
            android:paddingStart="12dp"
            android:paddingTop="10dp"
            android:paddingEnd="8dp"
            android:paddingBottom="10dp"
            android:textSize="17sp"/>


        <EditText
            android:textColor="@color/black"
            android:id="@+id/editTextLongitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:background="@drawable/emailpasswordborder"
            android:drawableLeft="@drawable/location"
            android:drawablePadding="12dp"
            android:ems="14"
            android:fontFamily="@font/montserrat"
            android:hint="@string/boylam_bilgisi_giriniz"
            android:textColorHint="#B7B6B6"
            android:inputType="number|text"
            android:paddingStart="12dp"
            android:paddingTop="10dp"
            android:paddingEnd="8dp"
            android:paddingBottom="10dp"
            android:textSize="17sp"/>


        <EditText
            android:textColor="@color/black"
            android:id="@+id/editTextRaporBilgisi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:background="@drawable/emailpasswordborder"
            android:drawableLeft="@drawable/report"
            android:drawablePadding="12dp"
            android:ems="14"
            android:fontFamily="@font/montserrat"
            android:hint="@string/report_info"
            android:textColorHint="#B7B6B6"
            android:inputType="text"
            android:paddingStart="12dp"
            android:paddingTop="10dp"
            android:paddingEnd="8dp"
            android:paddingBottom="10dp"
            android:textSize="17sp"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/ogrenciEkleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/girisyapselector"
            android:ems="9"
            android:fontFamily="@font/manrope_medium"
            android:text="@string/ogrenci_ekle"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="17sp" />


    </LinearLayout>

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progressBarSignUp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:indeterminate="true"
        android:translationZ="2dp"
        android:elevation="10dp"
        android:indeterminateTint="@color/appButtonColor"
        android:layout_gravity="center" />

</FrameLayout>